# fundamentals

./: .gitignore  LICENSE  README.md  addition.py  math.ipynb  package-lock.json  package.json  pyproject.toml  radio_button.css  requirements.txt  test.py
fnds_math/: LICENSE  README.md  addition.py  main.py  pyproject.toml
fnds_math/general_resource/: fnds_functionality.py  menu.py
fnds_math/general_resource/user_data/: kalle.csv
fnds_math/src/doors/: index.html  package.json  womanfinishedeating.html
fnds_math/src/doors_/: package.json
fnds_math/src/fnds_math/: addition.py  main.py
fnds_math/src/fnds_math.egg-info/: SOURCES.txt  top_level.txt
fnds_math/test/: addition.py  doors.py  math.ipynb  t-test.py  timer_.py
fundamentals_math_app/: setup.py
fundamentals_math_app/env/: pyvenv.cfg
fundamentals_math_app/fundamentals_math_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sandbox/: main.py  notebook.ipynb  test.py
sandbox/doors_dir/: clues.json  doors.py  game_menu.json  level_instructions.json  main.ipynb  vigenere_table.csv
sandbox/doors_dir/challange13/: 100_hLgRSBxL.txt  101_nAITPljcV.txt  102_NMQbDdrPIz.txt  103_eEuzjOHrL.txt  104_FWJKpM.txt  105_xqkkAfwLvW.txt  106_nWPjaS.txt  (+437 more)
sandbox/general_resource/: fnds_functionality.py  menu.py
sandbox/math_dir/: addition.py
sandbox/research/: eda.ipynb
src/apprenticeship_learning/: README.md
src/argparse/: README.md
src/fnds_math/: addition.py  main.py
src/fnds_math.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/imitation_learning/: README.md
(+15 files in other folders)
